--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 @import url("./componentes/cores.css");
 @import url("./componentes/tipografias.css");
+@import url("./componentes/componentes.css");
 
 /* Gerais */
 
@@ -11,4 +12,67 @@ body{
   font-weight: 400;
   line-height: 1.666;
   letter-spacing: 0.14px;
+  margin: 0px;
 }
+
+h1,h2,h3,p{
+  margin: 0px;
+}
+
+ul,li{
+  margin: 0;
+  padding: 0;
+}
+
+ul{
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+}
+
+img{
+  display: block;
+  max-width: 100%;
+}
+
+/* Header */
+
+.header-bg{
+  background-image: url("../images/bg-header-desktop.png");
+  background-size: cover;
+  background-position: center bottom;
+}
+
+.header-container{
+ 
+  max-width: 1110px;
+  margin: 0 auto;
+}
+
+#principal-title{
+  margin-bottom: 16px;
+}
+
+.header-container > a{
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  display: inline-block;
+  padding-top: 131px;
+  padding-bottom: 56px;
+}
+
+.section-principal{
+  max-width: 1110px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section-principal p{
+  max-width: 55ch;
+  margin: 0 auto 48px;
+ 
+  }
+
