--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 /* Gerais */
 
-body{
+body {
   font-family: 'Bai Jamjuree', sans-serif;
   font-size: 1.125rem;
   font-weight: 400;
@@ -15,47 +15,52 @@ body{
   margin: 0px;
 }
 
-h1,h2,h3,p{
+h1,
+h2,
+h3,
+p {
   margin: 0px;
 }
 
-ul,li{
+ul,
+li {
   margin: 0;
   padding: 0;
 }
 
-ul{
+ul {
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
+  color: inherit;
 }
 
-img{
+img {
   display: block;
   max-width: 100%;
 }
 
 /* Header */
 
-.header-bg{
+.header-bg {
   background-image: url("../images/bg-header-desktop.png");
   background-size: cover;
   background-position: center bottom;
 }
 
-.header-container{
- 
+.header-container {
+
   max-width: 1110px;
   margin: 0 auto;
 }
 
-#principal-title{
+#principal-title {
   margin-bottom: 16px;
 }
 
-.header-container > a{
+.header-container>a {
   position: relative;
   left: 50%;
   transform: translateX(-50%);
@@ -64,15 +69,184 @@ img{
   padding-bottom: 56px;
 }
 
-.section-principal{
+.section-principal {
   max-width: 1110px;
   margin: 0 auto;
   text-align: center;
 }
 
-.section-principal p{
+.section-principal p {
   max-width: 55ch;
   margin: 0 auto 48px;
- 
-  }
+}
 
+
+/* Track Section */
+
+.section-track-container-bg {
+  /* background-image: url("../images/image-computer.png");
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 752px 572px; */
+
+}
+
+.section-track-container {
+  max-width: 1440px;
+  margin: 0 auto 150px;
+  position: relative;
+  left: -10px;
+  display: grid;
+  gap: 0px 110px;
+  grid-template-columns: minmax(400px, auto) minmax(200px, 1fr);
+  align-items: center;
+}
+
+.header-track {
+  grid-column: 1/-1;
+  text-align: center;
+  margin-top: 150px;
+  margin-bottom: 80px;
+}
+
+.header-track h2 {
+  margin-bottom: 19px;
+}
+
+.header-track p {
+  max-width: 60ch;
+  margin: 0 auto;
+}
+
+.track-vantagens-list {
+  grid-area: 2 /2;
+  margin-bottom: 98px;
+}
+
+.track-vantagens-list p {
+  max-width: 34ch;
+}
+
+.track-vantagens-list li+li {
+  margin-top: 56px;
+}
+
+/* Section Anywhere */
+
+.section-anywhere {
+  max-width: 1110px;
+  margin: 0 auto;
+  display: grid;
+  text-align: center;
+  gap: 110px;
+  justify-items: center;
+}
+
+.header-anywhere h1 {
+  margin-bottom: 19px;
+}
+
+/* Section workflow */
+
+.section-workflow {
+  max-width: 1110px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.workflow-list {
+  display: flex;
+  gap: 0 30px;
+  margin-top: 76px;
+}
+
+.workflow-item {
+  flex: 1 1 350px;
+  display: flex;
+  flex-direction: column;
+}
+
+.workflow-item h3 {
+  margin-top: 44px;
+  margin-bottom: 16px;
+}
+
+.workflow-item img {
+  place-self: center;
+}
+
+
+/* Section Partners */
+
+.section-partners {
+  display: flex;
+  max-width: 1110px;
+  align-items: center;
+  margin: 150px auto;
+  gap: 90px;
+}
+
+/* Section Download */
+
+.section-download {
+  max-width: 1110px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section-download h2 {
+  margin-bottom: 19px;
+}
+
+.section-download p {
+  max-width: 60ch;
+  margin: 0 auto;
+}
+
+.download-buttons a:last-child {
+  margin-left: 16px;
+}
+
+.section-download .download-buttons {
+  margin-top: 48px;
+  margin-bottom: 163px;
+}
+
+/* Footer */
+
+.footer-container-bg {
+  background: #F5F6F7;
+}
+
+.footer-container {
+  max-width: 1110px;
+  margin: 0 auto;
+  padding: 39px 0px;
+  display: grid;
+  grid-template-columns: 1fr 3fr 2fr;
+  align-items: center;
+}
+
+.nav-footer .nav-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-items: start;
+  gap: 30px;
+  color:#4C545C;
+}
+
+.nav-footer .nav-item {
+  flex: 0 1 160px;
+
+}
+
+.nav-footer .nav-item a {
+  width: 100%;
+  padding: 6px 10px;
+}
+
+.social-list{
+  display: flex;
+  gap: 24px;
+  justify-self: end;
+}
