--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ img {
 
 .section-anywhere {
   max-width: 1110px;
-  margin: 0 auto;
+  margin: 30px auto 0px;
   display: grid;
   text-align: center;
   gap: 110px;
