--- a/css/componentes/componentes.css
+++ b/css/componentes/componentes.css
@@ -1,4 +1,5 @@
-.botao-1,.botao-2{
+.botao-1,
+.botao-2 {
   padding: 13px 36px;
   border-radius: 28px;
   color: white;
@@ -6,52 +7,10 @@
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.0988035), inset 0px -3px 0px rgba(0, 0, 0, 0.151333);
 }
 
-.botao-1{
+.botao-1 {
   background-color: var(--cor-p1);
 }
 
-.botao-2{
+.botao-2 {
   background-color: var(--cor-p2);
-}
-
-.section-anywhere{
-  max-width: 1110px;
-  margin: 0 auto;
-  display: grid;
-  text-align: center;
-  gap: 110px;
-  justify-items: center;
-}
-
-.header-anywhere h1{
-  margin-bottom: 19px;
-}
-
-/* Section workflow */
-
-.section-workflow{
-  max-width: 1110px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.workflow-list{
-  display: flex;
-  gap: 0 30px;
-  margin-top: 76px;
-}
-
-  .workflow-item{
-    flex: 1 1 350px;
-    display: flex;
-    flex-direction: column;
-  }
-
-.workflow-item h3{
-  margin-top: 44px;
-  margin-bottom: 16px;
-}
-
-.workflow-item img{
-  place-self: center;
 }
