--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,12 @@ img {
   max-width: 100%;
 }
 
+@media (max-width:900px) {
+  body {
+    font-size: 1rem;
+  }
+}
+
 /* Header */
 
 .header-bg {
@@ -70,6 +76,7 @@ img {
 }
 
 .section-principal {
+  padding: 0px 20px;
   max-width: 1110px;
   margin: 0 auto;
   text-align: center;
@@ -80,6 +87,15 @@ img {
   margin: 0 auto 48px;
 }
 
+@media (max-width:800px) {
+  .header-container>a {
+    padding-top: 70px;
+  }
+
+  .download-buttons {
+    margin-top: 40px;
+  }
+}
 
 /* Track Section */
 
@@ -97,7 +113,7 @@ img {
   left: -20px;
   display: grid;
   gap: 0px 110px;
-  grid-template-columns: minmax(400px, auto) minmax(200px, 1fr);
+  grid-template-columns: minmax(400px, auto) minmax(360px, auto);
   align-items: center;
 }
 
@@ -130,6 +146,54 @@ img {
   margin-top: 56px;
 }
 
+@media (max-width:1200px) {
+  .section-track-container {
+    gap: 0px 60px;
+  }
+}
+
+@media (max-width:900px) {
+  .section-track-container {
+    gap: 0px 40px;
+  }
+
+  .track-vantagens-list li+li {
+    margin-top: 20px;
+  }
+
+  .section-track-container img {
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+}
+
+@media (max-width:800px) {
+  .section-track-container {
+    grid-template-columns: 1fr;
+    left: 0;
+    padding: 120px 20px;
+    margin-bottom: 0px;
+  }
+
+  .header-track {
+    grid-column: 1;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  .track-vantagens-list {
+    grid-area: initial;
+    text-align: center;
+    margin-bottom: 0px;
+    margin-top: 56px;
+  }
+
+  .track-vantagens-list p {
+    margin: 0 auto;
+  }
+}
+
 /* Section Anywhere */
 
 .section-anywhere {
@@ -146,8 +210,15 @@ img {
 }
 
 .header-anywhere p {
- margin: 0 auto;
- max-width: 60ch;
+  margin: 0 auto;
+  max-width: 60ch;
+}
+
+@media (max-width:800px) {
+  .section-anywhere {
+    margin-top: 40px;
+    gap: 40px;
+  }
 }
 
 /* Section workflow */
@@ -156,16 +227,19 @@ img {
   max-width: 1110px;
   margin: 30px auto 0px;
   text-align: center;
+  padding: 0px 20px;
 }
 
 .workflow-list {
   display: flex;
-  gap: 0 30px;
+  /* gap: 30px; */
   margin-top: 76px;
+  flex-wrap: wrap;
 }
 
 .workflow-item {
-  flex: 1 1 350px;
+  padding: 10px;
+  flex: 1 1 280px;
   display: flex;
   flex-direction: column;
 }
@@ -179,6 +253,9 @@ img {
   place-self: center;
 }
 
+li.workflow-item:nth-child(n+2) img{
+  padding-bottom: 8px;
+}
 
 /* Section Partners */
 
@@ -188,6 +265,29 @@ img {
   align-items: center;
   margin: 150px auto;
   gap: 90px;
+  padding: 0px 20px;
+}
+
+@media (max-width:1200px) {
+  .section-partners {
+    gap: 60px;
+    justify-content: center;
+  }
+}
+
+@media (max-width:900px) {
+  .section-partners {
+    gap: 50px;
+    margin-top: 76px;
+    margin-bottom: 76px;
+  }
+
+}
+
+@media (max-width:800px) {
+  .section-partners {
+    flex-direction: column;
+  }
 }
 
 /* Section Download */
@@ -196,6 +296,7 @@ img {
   max-width: 1110px;
   margin: 0 auto;
   text-align: center;
+  padding: 0px 20px;
 }
 
 .section-download h2 {
@@ -216,6 +317,33 @@ img {
   margin-bottom: 163px;
 }
 
+@media(max-width:600px) {
+
+  h1,
+  h2,
+  h3 {
+    max-width: 15ch;
+    margin: 0 auto;
+  }
+
+  .section-download .download-buttons {
+    margin-top: 40px;
+    margin-bottom: 140px;
+
+  }
+
+  .download-buttons a:last-child {
+    margin-left: initial;
+    margin-top: 20px;
+  }
+
+  html body .main-container p {
+    max-width: 30ch;
+    margin: 0 auto;
+  }
+
+}
+
 /* Footer */
 
 .footer-container-bg {
@@ -225,10 +353,11 @@ img {
 .footer-container {
   max-width: 1110px;
   margin: 0 auto;
-  padding: 39px 0px;
+  padding: 39px 20px;
   display: grid;
   grid-template-columns: 1fr 3fr 2fr;
   align-items: center;
+
 }
 
 .nav-footer .nav-list {
@@ -236,7 +365,7 @@ img {
   flex-wrap: wrap;
   justify-items: start;
   gap: 10px 30px;
-  color:#4C545C;
+  color: #4C545C;
 }
 
 .nav-footer .nav-item {
@@ -249,8 +378,56 @@ img {
   padding: 6px 10px;
 }
 
-.social-list{
+.nav-footer .nav-item a:hover {
+  color: var(--cor-p1);
+}
+
+.social-list {
   display: flex;
   gap: 24px;
   justify-self: end;
+}
+
+.social-list svg:hover path {
+  fill: var(--cor-p1);
+}
+
+@media (max-width:1200px) {
+  .nav-footer .nav-item {
+    flex: 1 1 130px;
+    gap: 10px;
+  }
+
+}
+
+@media (max-width:800px) {
+  .social-list {
+    justify-self: center;
+  }
+
+  .nav-footer .nav-list {
+    flex-direction: column;
+  }
+
+  .nav-footer .nav-item {
+    flex: initial;
+  }
+
+  .nav-footer {
+
+    place-self: center;
+  }
+
+}
+
+@media(max-width:600px) {
+  .footer-container {
+    grid-template-columns: 1fr;
+    gap: 40px;
+    text-align: center;
+  }
+
+  .footer-container > a{
+    place-self: center;
+  }
 }
