--- a/css/style.css
+++ b/css/style.css
@@ -5,429 +5,13 @@
 @import url("./componentes/componentes.css");
 
 /* Gerais */
-
-body {
-  font-family: 'Bai Jamjuree', sans-serif;
-  font-size: 1.125rem;
-  font-weight: 400;
-  line-height: 1.666;
-  letter-spacing: 0.14px;
-  margin: 0px;
-}
-
-h1,
-h2,
-h3,
-p {
-  margin: 0px;
-}
-
-ul,
-li {
-  margin: 0;
-  padding: 0;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-}
-
-@media (max-width:900px) {
-  body {
-    font-size: 1rem;
-  }
-}
-
-/* Header */
-
-.header-bg {
-  background-image: url("../images/bg-header-desktop.png");
-  background-size: cover;
-  background-position: center bottom;
-}
-
-.header-container {
-
-  max-width: 1110px;
-  margin: 0 auto;
-}
-
-#principal-title {
-  margin-bottom: 16px;
-}
-
-.header-container>a {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  display: inline-block;
-  padding-top: 131px;
-  padding-bottom: 36px;
-}
-
-.section-principal {
-  padding: 0px 20px;
-  max-width: 1110px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.section-principal p {
-  max-width: 55ch;
-  margin: 0 auto 48px;
-}
-
-@media (max-width:800px) {
-  .header-container>a {
-    padding-top: 70px;
-  }
-
-  .download-buttons {
-    margin-top: 40px;
-  }
-}
-
-/* Track Section */
-
-/* .section-track-container-bg {
-  background-image: url("../images/image-computer.png");
-  background-repeat: no-repeat;
-  background-position: left bottom;
-  background-size: 752px 572px;
-} */
-
-.section-track-container {
-  max-width: 1440px;
-  margin: 0 auto 150px;
-  position: relative;
-  left: -20px;
-  display: grid;
-  gap: 0px 110px;
-  grid-template-columns: minmax(400px, auto) minmax(360px, auto);
-  align-items: center;
-}
-
-.header-track {
-  grid-column: 1/-1;
-  text-align: center;
-  margin-top: 150px;
-  margin-bottom: 80px;
-}
-
-.header-track h2 {
-  margin-bottom: 19px;
-}
-
-.header-track p {
-  max-width: 60ch;
-  margin: 0 auto;
-}
-
-.track-vantagens-list {
-  grid-area: 2 /2;
-  margin-bottom: 98px;
-}
-
-.track-vantagens-list p {
-  max-width: 34ch;
-}
-
-.track-vantagens-list li+li {
-  margin-top: 56px;
-}
-
-@media (max-width:1200px) {
-  .section-track-container {
-    gap: 0px 60px;
-  }
-}
-
-@media (max-width:900px) {
-  .section-track-container {
-    gap: 0px 40px;
-  }
-
-  .track-vantagens-list li+li {
-    margin-top: 20px;
-  }
-
-  .section-track-container img {
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-}
-
-@media (max-width:800px) {
-  .section-track-container {
-    grid-template-columns: 1fr;
-    left: 0;
-    padding: 120px 20px;
-    margin-bottom: 0px;
-  }
-
-  .header-track {
-    grid-column: 1;
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
-
-  .track-vantagens-list {
-    grid-area: initial;
-    text-align: center;
-    margin-bottom: 0px;
-    margin-top: 56px;
-  }
-
-  .track-vantagens-list p {
-    margin: 0 auto;
-  }
-}
-
-/* Section Anywhere */
-
-.section-anywhere {
-  max-width: 1110px;
-  margin: 90px auto 0px;
-  display: grid;
-  text-align: center;
-  gap: 110px;
-  justify-items: center;
-}
-
-.header-anywhere h2 {
-  margin-bottom: 19px;
-}
-
-.header-anywhere p {
-  margin: 0 auto;
-  max-width: 60ch;
-}
-
-@media (max-width:800px) {
-  .section-anywhere {
-    margin-top: 40px;
-    gap: 40px;
-  }
-}
-
-/* Section workflow */
-
-.section-workflow {
-  max-width: 1110px;
-  margin: 30px auto 0px;
-  text-align: center;
-  padding: 0px 20px;
-}
-
-.workflow-list {
-  display: flex;
-  /* gap: 30px; */
-  margin-top: 76px;
-  flex-wrap: wrap;
-}
-
-.workflow-item {
-  padding: 10px;
-  flex: 1 1 280px;
-  display: flex;
-  flex-direction: column;
-}
-
-.workflow-item h3 {
-  margin-top: 44px;
-  margin-bottom: 16px;
-}
-
-.workflow-item img {
-  place-self: center;
-}
-
-li.workflow-item:nth-child(n+2) img{
-  padding-bottom: 8px;
-}
-
-/* Section Partners */
-
-.section-partners {
-  display: flex;
-  max-width: 1110px;
-  align-items: center;
-  margin: 150px auto;
-  gap: 90px;
-  padding: 0px 20px;
-}
-
-@media (max-width:1200px) {
-  .section-partners {
-    gap: 60px;
-    justify-content: center;
-  }
-}
-
-@media (max-width:900px) {
-  .section-partners {
-    gap: 50px;
-    margin-top: 76px;
-    margin-bottom: 76px;
-  }
-
-}
-
-@media (max-width:800px) {
-  .section-partners {
-    flex-direction: column;
-  }
-}
-
-/* Section Download */
-
-.section-download {
-  max-width: 1110px;
-  margin: 0 auto;
-  text-align: center;
-  padding: 0px 20px;
-}
-
-.section-download h2 {
-  margin-bottom: 19px;
-}
-
-.section-download p {
-  max-width: 60ch;
-  margin: 0 auto;
-}
-
-.download-buttons a:last-child {
-  margin-left: 16px;
-}
-
-.section-download .download-buttons {
-  margin-top: 48px;
-  margin-bottom: 163px;
-}
-
-@media(max-width:600px) {
-
-  h1,
-  h2,
-  h3 {
-    max-width: 15ch;
-    margin: 0 auto;
-  }
-
-  .section-download .download-buttons {
-    margin-top: 40px;
-    margin-bottom: 140px;
-
-  }
-
-  .download-buttons a:last-child {
-    margin-left: initial;
-    margin-top: 20px;
-  }
-
-  html body .main-container p {
-    max-width: 30ch;
-    margin: 0 auto;
-  }
-
-}
-
-/* Footer */
-
-.footer-container-bg {
-  background: #F5F6F7;
-}
-
-.footer-container {
-  max-width: 1110px;
-  margin: 0 auto;
-  padding: 39px 20px;
-  display: grid;
-  grid-template-columns: 1fr 3fr 2fr;
-  align-items: center;
-
-}
-
-.nav-footer .nav-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-items: start;
-  gap: 10px 30px;
-  color: #4C545C;
-}
-
-.nav-footer .nav-item {
-  flex: 0 1 160px;
-
-}
-
-.nav-footer .nav-item a {
-  width: 100%;
-  padding: 6px 10px;
-}
-
-.nav-footer .nav-item a:hover {
-  color: var(--cor-p1);
-}
-
-.social-list {
-  display: flex;
-  gap: 24px;
-  justify-self: end;
-}
-
-.social-list svg:hover path {
-  fill: var(--cor-p1);
-}
-
-@media (max-width:1200px) {
-  .nav-footer .nav-item {
-    flex: 1 1 130px;
-    gap: 10px;
-  }
-
-}
-
-@media (max-width:800px) {
-  .social-list {
-    justify-self: center;
-  }
-
-  .nav-footer .nav-list {
-    flex-direction: column;
-  }
-
-  .nav-footer .nav-item {
-    flex: initial;
-  }
-
-  .nav-footer {
-
-    place-self: center;
-  }
-
-}
-
-@media(max-width:600px) {
-  .footer-container {
-    grid-template-columns: 1fr;
-    gap: 40px;
-    text-align: center;
-  }
-
-  .footer-container > a{
-    place-self: center;
-  }
-}
+@import url("./gerais/geral.css");
+@import url("./gerais/header.css");
+@import url("./gerais/footer.css");
+
+/* Home Page */
+@import url("./home/track-section.css");
+@import url("./home/anywhere-section.css");
+@import url("./home/workflow-section.css");
+@import url("./home/partners-section.css");
+@import url("./home/download-section.css");
