--- a/css/gerais/header.css
+++ b/css/gerais/header.css
@@ -3,7 +3,8 @@
 .header-bg {
   background-image: url("../../images/bg-header-desktop.png");
   background-size: cover;
-  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-position: center bottom -30px;
 }
 
 .header-container {
@@ -37,6 +38,13 @@
   margin: 0 auto 48px;
 }
 
+@media (max-width:1400px) {
+
+  .header-bg {
+    background-size: auto;
+  }
+}
+
 @media (max-width:800px) {
   .header-container>a {
     padding-top: 70px;
@@ -44,5 +52,12 @@
 
   .download-buttons {
     margin-top: 40px;
+  }
+}
+
+@media (max-width:600px) {
+  .header-bg {
+    background-image: url("../../images/bg-header-mobile.png");
+    background-size: cover;
   }
 }
