--- a/css/home/track-section.css
+++ b/css/home/track-section.css
@@ -4,7 +4,7 @@
   max-width: 1440px;
   margin: 0 auto 150px;
   
-  gap: 110px;
+  gap: 0px 110px;
   display: grid;
   grid-template-columns: minmax(400px, auto) minmax(360px, 1fr);
   align-items: center;
@@ -14,6 +14,8 @@
   position: relative;
   left: -32px;
 }
+
+
 
 .header-track {
   grid-column: 1/-1;
@@ -34,6 +36,7 @@
 .track-vantagens-list {
   grid-area: 2 /2;
   margin-bottom: 98px;
+  margin-top: 70px;
 }
 
 .track-vantagens-list p {
@@ -74,7 +77,7 @@
 
   .section-track-container img{
     position: static;
-    
+    left: -32px;
   }
   .track-vantagens-list {
     grid-area: initial;
